Resize hero image to fit cap in frame, fix cube stretch and remove stray dark block

--- a/essays.css
+++ b/essays.css
@@ -23,14 +23,14 @@ img {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    height: 115%;
+    height: 90%;
     width: auto;
     opacity: 0;
 }
 @media (min-aspect-ratio: 4/3) {
     img {
         height: auto;
-        width: 100%;
+        width: 80%;
     }
 }
 @media (max-aspect-ratio: 3/5) {
